--- a/index.html
+++ b/index.html
@@ -129,46 +129,53 @@
             <header class="portfolio-header">
                 <h2 data-text-lang="portfolio-fem"></h2>
             </header>
+            <!--PRODUCT REVIEW-->
             <article class="portfolio-content uflexcol-end fem1">
                 <div class="content-title utext-center">
-                    <h3><a class="ubold ulink" data-text-lang="fem1" href="" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="" target="_blank"></a></p>
+                    <h3><a class="ubold ulink" data-text-lang="fem1" href="https://engineercookie.github.io/product-preview-card-component-main/" target="_blank"></a></h3>
+                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa" target="_blank"></a></p>
                 </div>
             </article>
+            <!--INTERACTIVE RATING-->
             <article class="portfolio-content uflexcol-end fem2">
                 <div class="content-title utext-center">
-                    <h3><a class="ubold ulink" data-text-lang="fem2" href="" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="" target="_blank"></a></p>
+                    <h3><a class="ubold ulink" data-text-lang="fem2" href="https://engineercookie.github.io/interactive-rating-component/" target="_blank"></a></h3>
+                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI" target="_blank"></a></p>
                 </div>
             </article>
+            <!--QR COMPONENT-->
             <article class="portfolio-content uflexcol-end fem3">
                 <div class="content-title utext-center">
-                    <h3><a class="ubold ulink" data-text-lang="fem3" href="" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="" target="_blank"></a></p>
+                    <h3><a class="ubold ulink" data-text-lang="fem3" href="https://engineercookie.github.io/qr-code-component-main/" target="_blank"></a></h3>
+                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H" target="_blank"></a></p>
                 </div>
             </article>
+            <!--ORDER SUMMARY-->
             <article class="portfolio-content uflexcol-end fem4">
                 <div class="content-title utext-center">
-                    <h3><a class="ubold ulink" data-text-lang="fem4" href="" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="" target="_blank"></a></p>
+                    <h3><a class="ubold ulink" data-text-lang="fem4" href="https://engineercookie.github.io/order-summary-component-main/" target="_blank"></a></h3>
+                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj" target="_blank"></a></p>
                 </div>
             </article>
+            <!--COLUMN REVIEW-->
             <article class="portfolio-content uflexcol-end fem5">
                 <div class="content-title utext-center">
-                    <h3><a class="ubold ulink" data-text-lang="fem5" href="" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="" target="_blank"></a></p>
+                    <h3><a class="ubold ulink" data-text-lang="fem5" href="https://engineercookie.github.io/3-column-preview-card-component-main/" target="_blank"></a></h3>
+                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-" target="_blank"></a></p>
                 </div>
             </article>
+            <!--FAQ ACCORDION-->
             <article class="portfolio-content uflexcol-end fem6">
                 <div class="content-title utext-center">
-                    <h3><a class="ubold ulink" data-text-lang="fem6" href="" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="" target="_blank"></a></p>
+                    <h3><a class="ubold ulink" data-text-lang="fem6" href="https://engineercookie.github.io/faq-accordion-card-main/" target="_blank"></a></h3>
+                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/faq-accordion-card-XlyjD0Oam" target="_blank"></a></p>
                 </div>
             </article>
+            <!--INTERACTIVE CARD-->
             <article class="portfolio-content uflexcol-end fem7">
                 <div class="content-title utext-center">
-                    <h3><a class="ubold ulink" data-text-lang="fem7" href="" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="" target="_blank"></a></p>
+                    <h3><a class="ubold ulink" data-text-lang="fem7" href="https://engineercookie.github.io/interactive-card-details-form-main/" target="_blank"></a></h3>
+                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/interactive-card-details-form-XpS8cKZDWw" target="_blank"></a></p>
                 </div>
             </article>
             <footer class="portfolio-footer uflexrow-end">
