--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--SKIP TO MAIN CONTENT BUTTOM-->
         <nav class="navbar rflexrowcenter-colreverse">
             <ul class="nav-left rflexrowstart-colstart unlist">
-                <!--<li><a class='ulink' href='#about-me'><span data-text-lang="nav-about-me" class='ubold'></span></a></li>-->
+                <li><a class='ulink' href='#about-me'><span data-text-lang="nav-about-me" class='ubold'></span></a></li>
                 <li><a class='ulink' href="#p-per"><span data-text-lang="nav-personal" class="ubold"></span></a></li>
                 <li><a class='ulink' href="#p-fcc">freeCodeCamp</a></li>
                 <li><a class='ulink' href="#p-fem">Front-End Mentor</a></li>
