--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
             <header class="portfolio-header">
                 <h2 data-text-lang="nav-personal"></h2>
             </header>
+            <!--PILOT MEMORY-->
+            <article class="portfolio-content uflexcol-center per2">
+                <div class="content-card animation rt-lt">
+                    <a class="ulink" href="https://engineercookie.github.io/pilot-memory/" target="_blank">
+                        <h3 class="ubold utext-center" data-text-lang="per2-title"></h3>
+                        <p class="utext-justify" data-text-lang="per2-desc"></p>
+                    </a>
+                </div>
+            </article>
+            <!--QUICK MATH GAME-->
             <article class="portfolio-content uflexcol-center per1">
                 <div class="content-card animation rt-lt">
                     <a class="ulink" href='https://engineercookie.github.io/quick-math/' target='_blank'>
