update/ added BIZNET

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--SKIP TO MAIN CONTENT BUTTOM-->
         <nav class="navbar rflexrowcenter-colreverse">
             <ul class="nav-left rflexrowstart-colstart unlist">
-                <li><a class='ulink' href='#about-me'><span data-text-lang="nav-about-me" class='ubold'></span></a></li>
+                <li><a class='ulink' href='#p-fullstack'>Full-stack</a></li>
                 <li><a class='ulink' href="#p-per"><span data-text-lang="nav-personal" class="ubold"></span></a></li>
                 <li><a class='ulink' href="#p-fcc">freeCodeCamp</a></li>
                 <li><a class='ulink' href="#p-fem">Front-End Mentor</a></li>
@@ -80,6 +80,24 @@
                 </div>
             </div>
         </section>
+        <!-- Fullstack SECTION-->
+        <section id="p-fullstack" class="portfolio">
+            <header class="portfolio-header">
+                <h2 data-text-lang="portfolio-fullstack"></h2>
+            </header>
+            <!-- BIZNET -->
+            <article class="portfolio-content uflexcol-center per3">
+                <div class="content-card animation rl-lt">
+                    <a class="ulink" href="https://biznet.onrender.com/" target="'_blank">
+                        <h3 class="ubold utext-center" data-text-lang="per3-title"></h3>
+                        <p class="utext-justify" data-text-lang="per3-desc"></p>
+                    </a>
+                </div>
+            </article>
+            <footer class="portfolio-footer uflexrow-end">
+                <p data-text-lang="portfolio-fullstack"></p>
+            </footer>
+        </section>
         <!--Personal SECTION-->
         <section id="p-per" class="portfolio">
             <header class="portfolio-header">
@@ -88,7 +106,7 @@
             <!--PILOT MEMORY-->
             <article class="portfolio-content uflexcol-center per2">
                 <div class="content-card animation rt-lt">
-                    <a class="ulink" href="https://engineercookie.github.io/pilot-memory/" target="_blank">
+                    <a class="ulink" href="https://engineercookie.github.io/pilot-me    mory/" target="_blank">
                         <h3 class="ubold utext-center" data-text-lang="per2-title"></h3>
                         <p class="utext-justify" data-text-lang="per2-desc"></p>
                     </a>
