--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer" />
-    <title>EngineerCookie</title>
+    <title>EngineerCookies</title>
     <link rel="shortcut icon" href='#' />
     <link rel="stylesheet" href="./css/index.css">
     <script src="app.js" type="module" defer></script>
@@ -18,10 +18,11 @@
         <!--SKIP TO MAIN CONTENT BUTTOM-->
         <nav class="navbar rflexrowcenter-colreverse">
             <ul class="nav-left rflexrowstart-colstart unlist">
+                <li><a class="ulink" href="#p-mobile"><span class="ubold">Apps</span></a></li>
                 <li><a class='ulink' href='#p-fullstack'>Full-stack</a></li>
                 <li><a class='ulink' href="#p-per"><span data-text-lang="nav-personal" class="ubold"></span></a></li>
-                <li><a class='ulink' href="#p-fcc">freeCodeCamp</a></li>
-                <li><a class='ulink' href="#p-fem">Front-End Mentor</a></li>
+                <!-- <li><a class='ulink' href="#p-fcc">freeCodeCamp</a></li>
+                <li><a class='ulink' href="#p-fem">Front-End Mentor</a></li> -->
                 <li><a class='ulink' href="#contact-me"><span data-text-lang="nav-contact-me" class="ubold"></span></a>
                 </li>
             </ul>
@@ -68,17 +69,91 @@
                     <a class="ulink" href='https://github.com/EngineerCookie' target='_blank'>
                         <span class="ubold">@EngineerCookie</span></a>
                 </div>
-                <div class="fcc-link uflexrow-center animation dn-up">
-                    <svg class='social-icon' alt='free code camp icon' xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 576 512">
+                <div class="github-link uflexrow-center animation dn-up">
+                    <svg class='social-icon' alt="github icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
                         {/*<!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->*/}
                         <path
-                            d="M97.22,96.21c10.36-10.65,16-17.12,16-21.9,0-2.76-1.92-5.51-3.83-7.42A14.81,14.81,0,0,0,101,64.05c-8.48,0-20.92,8.79-35.84,25.69C23.68,137,2.51,182.81,3.37,250.34s17.47,117,54.06,161.87C76.22,435.86,90.62,448,100.9,448a13.55,13.55,0,0,0,8.37-3.84c1.91-2.76,3.81-5.63,3.81-8.38,0-5.63-3.86-12.2-13.2-20.55-44.45-42.33-67.32-97-67.48-165C32.25,188.8,54,137.83,97.22,96.21ZM239.47,420.07c.58.37.91.55.91.55Zm93.79.55.17-.13C333.24,420.62,333.17,420.67,333.26,420.62Zm3.13-158.18c-16.24-4.15,50.41-82.89-68.05-177.17,0,0,15.54,49.38-62.83,159.57-74.27,104.35,23.46,168.73,34,175.23-6.73-4.35-47.4-35.7,9.55-128.64,11-18.3,25.53-34.87,43.5-72.16,0,0,15.91,22.45,7.6,71.13C287.7,364,354,342.91,355,343.94c22.75,26.78-17.72,73.51-21.58,76.55,5.49-3.65,117.71-78,33-188.1C360.43,238.4,352.62,266.59,336.39,262.44ZM510.88,89.69C496,72.79,483.52,64,475,64a14.81,14.81,0,0,0-8.39,2.84c-1.91,1.91-3.83,4.66-3.83,7.42,0,4.78,5.6,11.26,16,21.9,43.23,41.61,65,92.59,64.82,154.06-.16,68-23,122.63-67.48,165-9.34,8.35-13.18,14.92-13.2,20.55,0,2.75,1.9,5.62,3.81,8.38A13.61,13.61,0,0,0,475.1,448c10.28,0,24.68-12.13,43.47-35.79,36.59-44.85,53.14-94.38,54.06-161.87S552.32,137,510.88,89.69Z" />
+                            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
                     </svg>
-                    <a class="ulink" href='https://www.freecodecamp.org/EngineerCookie' target='_blank'>
-                        <span class="ubold">@EngineerCookie</span></a>
+                    <a class="ulink" href='https://github.com/Cookie-Web-Development' target='_blank'>
+                        <span class="ubold">@Cookie-Web-Development</span></a>
+                </div>
+                <div class="uflexrow-center animation dn-up">
+                    <svg class='social-icon' alt="email icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        {/*<!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->*/}
+                        <path
+                            d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
+                    </svg>
+                    <a class="ulink" href="mailto:engineer.cookie@outlook.com">
+                        <span class="ubold">engineer.cookie@outlook.com</span>
+                    </a>
+
+                    <!--<a class="ulink" href="mailto:engineer.cookie@outlook.com">engineer.cookie@outlook.com</a>-->
                 </div>
             </div>
+        </section>
+        <!-- Mobile SECTION-->
+        <section id="p-mobile" class="portfolio">
+            <header class="portfolio-header">
+                <h2 data-text-lang="portfolio-mobile"></h2>
+            </header>
+            <!-- Math Blitz -->
+            <article class="portfolio-content uflexcol-center mob2">
+                <div class="content-card animation rt-lt">
+                    <div class="uflexrow-center-wrap">
+                        <img src="./img/mobile/mathblitz-icon.png" class="social-icon" />
+                        <h3 class="ubold utext-center" data-text-lang="mob2-title"></h3>
+                    </div>
+                    <p class="utext-justify" data-text-lang="mob2-desc"></p>
+                    <div class="uflexrow-center">
+                        <a class="ulink"
+                            href="https://play.google.com/store/apps/details?id=com.cookiewebdevelopment.mathblitz&pcampaignid=web_share"
+                            target="_blank">
+                            <div class="uflexrow-start">
+                                <svg class="social-icon" alt="google playstore icon" xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                    <path
+                                        d="M325.3 234.3L104.6 13l280.8 161.2-60.1 60.1zM47 0C34 6.8 25.3 19.2 25.3 35.3v441.3c0 16.1 8.7 28.5 21.7 35.3l256.6-256L47 0zm425.2 225.6l-58.9-34.1-65.7 64.5 65.7 64.5 60.1-34.1c18-14.3 18-46.5-1.2-60.8zM104.6 499l280.8-161.2-60.1-60.1L104.6 499z" />
+                                </svg>
+                                <p>Google Play Store</p>
+                            </div>
+                        </a>
+                        <a class="ulink" href="https://sites.google.com/view/mathblitz-policy" target="_blank">
+                            <p data-text-lang="privacy-policy"></p>
+                        </a>
+                    </div>
+                </div>
+            </article>
+            <!-- Palabras al viento -->
+            <article class="portfolio-content uflexcol-center mob1">
+                <div class="content-card animation rt-lt">
+                    <div class="uflexrow-center-wrap">
+                        <img src="./img/mobile/palabrasalviento-icon.png" class="social-icon" />
+                        <h3 class="ubold utext-center" data-text-lang="mob1-title"></h3>
+                    </div>
+                    <p class="utext-justify" data-text-lang="mob1-desc"></p>
+                    <p class="utext-justify" data-text-lang="mob1-note"></p>
+                    <div class="uflexrow-center">
+                        <a class="ulink" href="https://groups.google.com/g/cookiedev-testers" target="_blank">
+                            <div class="uflexrow-start">
+                                <svg class="social-icon" alt="google icon" xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 488 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                    <path
+                                        d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z" />
+                                </svg>
+                                <p class="utext-justify">CookieDev Testers</p>
+                            </div>
+                        </a>
+                        <a class="ulink" href="https://sites.google.com/view/palabras-al-viento-privacidad/"
+                            target="_blank">
+                            <p data-text-lang="privacy-policy"></p>
+                        </a>
+                    </div>
+                </div>
+            </article>
+            <footer class="portfolio-footer uflexrow-end">
+                <p data-text-lang="portfolio-mobile"></p>
+            </footer>
         </section>
         <!-- Fullstack SECTION-->
         <section id="p-fullstack" class="portfolio">
@@ -87,7 +162,7 @@
             </header>
             <!-- BIZNET -->
             <article class="portfolio-content uflexcol-center per3">
-                <div class="content-card animation rl-lt">
+                <div class="content-card animation rt-lt">
                     <a class="ulink" href="https://biznet.onrender.com/" target="'_blank">
                         <h3 class="ubold utext-center" data-text-lang="per3-title"></h3>
                         <p class="utext-justify" data-text-lang="per3-desc"></p>
@@ -125,114 +200,11 @@
                 <p data-text-lang="nav-personal"></p>
             </footer>
         </section>
-        <!--freeCodeCamp SECTION-->
-        <section id="p-fcc" class="portfolio">
-            <header class="portfolio-header">
-                <h2 data-text-lang="portfolio-fcc"></h2>
-            </header>
-            <!--RANDOM QUOTE GENERATOR-->
-            <article class="portfolio-content uflexcol-center fcc1">
-                <div class="content-card animation lt-rt">
-                    <a class="ulink" href='https://engineercookie.github.io/random-quote-generator/' target='_blank'>
-                        <h3 class="ubold utext-center" data-text-lang="quotegen-title"></h3>
-                        <p class="utext-justify" data-text-lang="quotegen-desc"></p>
-                    </a>
-                </div>
-            </article>
-            <!--D3 MAPS-->
-            <article class='portfolio-content uflexcol-center fcc2'>
-                <div class="content-card animation rt-lt">
-                    <a class="ulink" href='https://engineercookie.github.io/Visualize-Data-with-a-Bar-Chart/' target='_blank'>
-                        <h3 class="ubold utext-center" data-text-lang="d3-tittle"></h3>
-                        <p class="utext-justify" data-text-lang="d3-desc"></p>
-                    </a>
-                </div>
-                <div class="d3-gallery uflexrow-center-wrap">
-                    <a class="d3-item animation dn-up d100" href="https://engineercookie.github.io/Visualize-Data-with-a-Scatterplot-Graph/" target='_blank'>
-                        <img width='250px' src="./img/freecodecamp/d3-scatterplot.png" />
-                        <h4 class="utext-center" data-text-lang="d3-plot"></h4>
-                    </a>
-                    <a class="d3-item animation dn-up d200" href="https://engineercookie.github.io/Visualize-Data-with-a-Heat-Map/" target='_blank'>
-                        <img width='250px' src="./img/freecodecamp/d3-heatmap.png" />
-                        <h4 class="utext-center" data-text-lang="d3-heat"></h4>
-                    </a>
-                    <a class="d3-item animation dn-up d300" href="https://engineercookie.github.io/Visualize-Data-with-a-Choropleth-Map/" target='_blank'>
-                        <img width='250px' src="./img/freecodecamp/d3-choroplethmap.png" />
-                        <h4 class="utext-center" data-text-lang="d3-cho"></h4>
-                    </a>
-                    <a class="d3-item animation dn-up d400" href="https://engineercookie.github.io/Visualize-Data-with-a-Treemap-Diagram/" target='_blank'>
-                        <img width='250px' src="./img/freecodecamp/d3-treemap.png" />
-                        <h4 class="utext-center" data-text-lang="d3-tree"></h4>
-                    </a>
-                </div>
-            </article>
-            <footer class="portfolio-footer uflexrow-end">
-                <p data-text-lang="portfolio-fcc"></p>
-            </footer>
-        </section>
-        <!--FRONTEND Mentor SECTION-->
-        <section id="p-fem" class="portfolio">
-            <header class="portfolio-header">
-                <h2 data-text-lang="portfolio-fem"></h2>
-            </header>
-            <!--PRODUCT REVIEW-->
-            <article class="portfolio-content uflexcol-end fem1">
-                <div class="content-title utext-center animation dn-up">
-                    <h3><a class="ubold ulink" data-text-lang="fem1" href="https://engineercookie.github.io/product-preview-card-component-main/" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa" target="_blank"></a></p>
-                </div>
-            </article>
-            <!--INTERACTIVE RATING-->
-            <article class="portfolio-content uflexcol-end fem2">
-                <div class="content-title utext-center animation dn-up">
-                    <h3><a class="ubold ulink" data-text-lang="fem2" href="https://engineercookie.github.io/interactive-rating-component/" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI" target="_blank"></a></p>
-                </div>
-            </article>
-            <!--QR COMPONENT-->
-            <article class="portfolio-content uflexcol-end fem3">
-                <div class="content-title utext-center animation dn-up">
-                    <h3><a class="ubold ulink" data-text-lang="fem3" href="https://engineercookie.github.io/qr-code-component-main/" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H" target="_blank"></a></p>
-                </div>
-            </article>
-            <!--ORDER SUMMARY-->
-            <article class="portfolio-content uflexcol-end fem4">
-                <div class="content-title utext-center animation dn-up">
-                    <h3><a class="ubold ulink" data-text-lang="fem4" href="https://engineercookie.github.io/order-summary-component-main/" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj" target="_blank"></a></p>
-                </div>
-            </article>
-            <!--COLUMN REVIEW-->
-            <article class="portfolio-content uflexcol-end fem5">
-                <div class="content-title utext-center animation dn-up">
-                    <h3><a class="ubold ulink" data-text-lang="fem5" href="https://engineercookie.github.io/3-column-preview-card-component-main/" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-" target="_blank"></a></p>
-                </div>
-            </article>
-            <!--FAQ ACCORDION-->
-            <article class="portfolio-content uflexcol-end fem6">
-                <div class="content-title utext-center animation dn-up">
-                    <h3><a class="ubold ulink" data-text-lang="fem6" href="https://engineercookie.github.io/faq-accordion-card-main/" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/faq-accordion-card-XlyjD0Oam" target="_blank"></a></p>
-                </div>
-            </article>
-            <!--INTERACTIVE CARD-->
-            <article class="portfolio-content uflexcol-end fem7">
-                <div class="content-title utext-center animation dn-up">
-                    <h3><a class="ubold ulink" data-text-lang="fem7" href="https://engineercookie.github.io/interactive-card-details-form-main/" target="_blank"></a></h3>
-                    <p><a class="ubold ulink" data-text-lang="feMentor" href="https://www.frontendmentor.io/challenges/interactive-card-details-form-XpS8cKZDWw" target="_blank"></a></p>
-                </div>
-            </article>
-            <footer class="portfolio-footer uflexrow-end">
-                <p data-text-lang="portfolio-fem"></p>
-            </footer>
-        </section>
         <section id="contact-me" class="uflexcol-center">
             <article class="contact-card animation up-dn">
                 <h2 class="utitle ubold" data-text-lang="contact-title">CONTACT ME</h2>
                 <h3 data-text-lang="contact-desc">SEND ME AN EMAIL</h3>
-                <h4><a class="ulink" href="mailto:engineer.cookie@outlook.com">engineer.cookie@outlook.com</a></h4> 
+                <h4><a class="ulink" href="mailto:engineer.cookie@outlook.com">engineer.cookie@outlook.com</a></h4>
             </article>
         </section>
     </main>
